--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "merge-images": "^2.0.0",
     "next": "13.2.4",
     "nft.storage": "^7.0.3",
+    "node-fetch": "^3.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "web3modal": "^1.9.12"
